hw3/decafexpr/output/dev/llvm/externreadint.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: /home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/output/dev/llvm/externreadint.llvm:1:1: error: expected top-level entity
Warning: redefining previously defined identifier: 
^
